--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "date-fn": "^0.0.2",
     "holiday": "^1.0.0",
+    "ng-image-slider": "^3.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
