--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
+  },
+
+
+  "/api/*": {
+      "target": "http://localhost:3000/", "secure": false
   }
 }
+
